--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
     "eslint": "3.17.0",
     "react": "16.3.1",
     "react-native": "0.55.4"
+  },
+  "devDependencies": {
+    "@types/react": "16.3.14",
+    "@types/react-native": "0.55.15",
+    "react-native-typescript-transformer": "1.2.5",
+    "typescript": "2.8.3"
   }
 }
