--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "node node_modules/react-native/local-cli/cli.js start"
   },
   "dependencies": {
-    "eslint": "3.17.0",
     "react": "16.3.1",
     "react-native": "0.55.4"
   },
   "devDependencies": {
     "@types/react": "16.3.14",
-    "@types/react-native": "0.55.15",
+    "@types/react-native": "0.55.4",
+    "eslint": "4.1.1",
+    "eslint-config-google": "0.9.1",
+    "eslint-plugin-react": "^7.8.2",
     "react-native-typescript-transformer": "1.2.5",
     "typescript": "2.8.3"
   }
