--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,8 @@
   "parserOptions": {
     "ecmaVersion": 6,
     "sourceType": "module"
+  },
+  "rules": {
+    "max-len": ["warn", { "code" : 120 }]
   }
 }
