--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2015",
-    "module": "ES2015",
+    "target": "es2015",
+    "module": "es2015",
     "allowJs": true,
     "checkJs": true,
     "jsx": "react-native",
@@ -15,8 +15,7 @@
     "paths": {
       "app/*": [ "./*" ]
     },
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "allowSyntheticDefaultImports": true
   },
   "typeRoots": [
     "./node_modules/@types"
