First raw version for blog post :rocket:

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,12 +7,12 @@ target 'ReactNativeTypescriptExistingApp' do
 
   pod 'React', :path => '../node_modules/react-native', :subspecs => [
     'Core',
-    'CxxBridge', # Include this for RN >= 0.47
-    'DevSupport', # Include this to enable In-App Devmenu if RN >= 0.43
+    'CxxBridge',
+    'DevSupport',
     'RCTText',
     'RCTNetwork',
-    'RCTWebSocket', # needed for debugging
-    # Add any other subspecs you want to use in your project
+    'RCTWebSocket',
+    'RCTImage'
   ]
   pod "yoga", :path => "../node_modules/react-native/ReactCommon/yoga"
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
