--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-native": "0.55.4"
   },
   "devDependencies": {
-    "@types/jasmine": "^2.8.7",
+    "@types/jasmine": "2.8.7",
     "@types/react": "16.3.14",
     "@types/react-native": "0.55.4",
     "eslint": "4.1.1",
